--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="box-red"></div>
       <div class="box-green"></div>
     </div>
-    <p>
+    <p class="text">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi neque
       exercitationem ad vitae minus accusantium odio pariatur eveniet, quisquam mollitia, possimus
       officia. Assumenda, eveniet odio. Doloribus quia ad quod, quidem tempore in illo tempora
