--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./grid.css" />
   </head>
   <body>
     <div class="box">
       <div class="box-pink"></div>
       <div class="box-red"></div>
       <div class="box-green"></div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col m12 t6 pcl4 box-test">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, incidunt.
+        </div>
+        <div class="col m12 t6 pcl4 box-test">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, incidunt.
+        </div>
+        <div class="col m12 t6 pcl4 box-test">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, incidunt.
+        </div>
+      </div>
     </div>
     <p class="text">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi neque
