--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./grid.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
   </head>
   <body>
     <div class="box">
@@ -14,15 +22,15 @@
       <div class="box-red"></div>
       <div class="box-green"></div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col m12 t6 pcl4 box-test">
+        <div class="col col-12 col-sm-6 col-md-4 col-lg-3">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, incidunt.
         </div>
-        <div class="col m12 t6 pcl4 box-test">
+        <div class="col col-12 col-sm-6 col-md-4 col-lg-3">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, incidunt.
         </div>
-        <div class="col m12 t6 pcl4 box-test">
+        <div class="col col-12 col-sm-6 col-md-4 col-lg-3">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, incidunt.
         </div>
       </div>
