--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./grid.css" />
+    <!-- <link rel="stylesheet" href="./grid.css" /> -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +23,7 @@
       <div class="box-green"></div>
     </div>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row gx-4">
         <div class="col col-12 col-sm-6 col-md-4 col-lg-3">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, incidunt.
         </div>
